# autoschematic

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  autoschematic.ron
.github/workflows/: ci.yml  release.yml  verify-macos.yml  verify-ubuntu.yml  verify.yml
autoschematic/: Cargo.toml  README.md
autoschematic-cli/: Cargo.toml
autoschematic-cli/.cargo/: config.toml
autoschematic-cli/src/: apply.rs  create.rs  import.rs  init.rs  main.rs  plan.rs  validate.rs
autoschematic-connector-python/: .gitignore  README.md  publish-pypi.yaml  pyproject.toml  setup.py
autoschematic-connector-python/autoschematic_connector/: __init__.py  lib.py
autoschematic-core/: Cargo.toml  build.rs
autoschematic-core/proto/: connector.capnp  connector.proto
autoschematic-core/src/: aux_task.rs  binary_cache.rs  bundle.rs  config.rs  config_bundle.rs  config_rbac.rs  connector.rs  connector_cache.rs  connector_util.rs  diag.rs  error.rs  error_util.rs  flock.rs  git_util.rs  glob.rs  grpc_bridge.rs  keystore.rs  lib.rs  lockfile.rs  macros.rs  manifest.rs  read_outputs.rs  report.rs  secret.rs  tarpc_bridge.rs  task.rs  template.rs  tracing_panic.rs  unescape.rs  util.rs  workflow.rs  write_output.rs
autoschematic-core/src/aux_task/: registry.rs  state.rs  util.rs
autoschematic-core/src/connector/: handle.rs  parse.rs  shutdown.rs  spawn.rs  task.rs  task_registry.rs  type.rs
autoschematic-core/src/connector/spawn/: python.rs  sandbox.rs  unsandbox.rs
autoschematic-core/src/grpc_bridge/: connector.rs  grpc_connector.rs
autoschematic-core/src/grpc_generated/: connector.rs
autoschematic-core/src/keystore/: ondisk.rs
autoschematic-core/src/ron/: mod.rs  parse.rs  path_at.rs  ron.pest
autoschematic-core/src/task/: message.rs  registry.rs  util.rs
autoschematic-core/src/workflow/: apply.rs  check_drift.rs  filter.rs  get.rs  get_docstring.rs  get_skeletons.rs  import.rs  list.rs  plan.rs  rename.rs  task_exec.rs  unbundle.rs
autoschematic-lsp/: Cargo.toml  LICENSE
autoschematic-lsp/ext-vscode/autoschematic/: CHANGELOG.md  README.md  package-lock.json  package.json
autoschematic-lsp/ext-vscode/autoschematic/src/: connectorView.ts  decorationProvider.ts  extension.ts
autoschematic-lsp/src/: main.rs  parse.rs  path_at.rs  reindent.rs  ron.pest  util.rs
autoschematic-macros/: Cargo.toml
autoschematic-macros/src/: lib.rs
autoschematic-sdk-python/: pyproject.toml
autoschematic-sdk-python/autoschematic_sdk/: __init__.py  addr.py  error.py  server.py  types.py
autoschematic-sdk-python/examples/: dummy_connector.py  grafana.py
autoschematic-sdk-python/scripts/: gen_proto.sh
autoschematic-sdk-ts/: package-lock.json  package.json
autoschematic-sdk-ts/scripts/: gen_proto.sh
autoschematic-sdk-ts/src/: addr.ts  grpcServer.ts  index.ts  types.ts
autoschematic-server/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.release
autoschematic-server/dashboard/: dashboard.html  dashboard_list.html  tailwind.sh
autoschematic-server/dashboard-react/: README.md  package.json
autoschematic-server/doc/: 01-resource-addressing.md  03-objects.md
autoschematic-server/src/: aux_task.rs  bundle.rs  changeset.rs  changeset_cache.rs  command.rs  credentials.rs  dashboard.rs  error.rs  event_handlers.rs  github_cred_store.rs  github_util.rs  main.rs  object.rs  repolock.rs  secret.rs  task.rs  template.rs  tracestore.rs  url_builder.rs  util.rs
autoschematic-server/templates/: apply_overall_success_with_deferrals.md  command_parse_failure.md  connector_stdout.md  explain_success.md  filter_matched_no_files.md  greeting.md  import_success.md  plan_overall_success.md  plan_overall_success_with_deferrals.md  plan_success_multi.md  pull_state_clean.md  skeleton_import_success.md
autoschematic/dashboard/: package-lock.json  package.json  repo_view.html
autoschematic/dashboard-react/: index.html
autoschematic/dashboard-react/src/: index.css
autoschematic/dashboard-react/src/components/: DashboardList.tsx  RepoView.tsx
autoschematic/dashboard-react/src/services/: mockData.ts
autoschematic/dashboard/static/: output.css
autoschematic/doc/: 02-controllers.md
autoschematic/src/: apply.rs  aux_task.rs  bundle.rs  check_drift.rs  chwd.rs  config.rs  create.rs  dashboard.rs  event_handlers.rs  git_util.rs  import.rs  init.rs  install.rs  main.rs  object.rs  plan.rs  repolock.rs  safety_lock.rs  seal.rs  secret.rs  spinner.rs  sso.rs  task.rs  template.rs  ui.rs  unbundle.rs  url_builder.rs  util.rs  validate.rs
autoschematic/src/aux_task/: test_task.rs
autoschematic/src/aux_task/test_task/: fuzz_test.rs
autoschematic/src/bundle/: python.rs
autoschematic/src/changeset/: apply.rs  import.rs  import_skeletons.rs  plan.rs  pull_state.rs  solver.rs
autoschematic/src/dashboard/: api_util.rs  routes.rs
autoschematic/src/repolock/: inmem.rs  ondisk.rs
autoschematic/src/spinner/: mod.rs  spinner.rs
autoschematic/src/spinner/utils/: spinners_data.rs
autoschematic/src/task/: python_task.rs  test_task.rs
autoschematic/src/task/python_task/: util.rs
autoschematic/src/task/test_task/: fuzz_test.rs  util.rs
autoschematic/templates/: apply_error.md  apply_no_plan.md  apply_overall_success.md  apply_success.md  import_error.md  list_success.md  migration_explain_error.md  misc_error.md  plan_deferral_loop.md  plan_error.md  plan_no_changes.md  plan_overall_error.md  plan_success.md  pr_lock_held.md  pull_state_error.md  pull_state_success.md  pull_state_success_with_deferrals.md  skeleton_import_error.md
connectors/autoschematic-connector-python-host/: Cargo.toml
connectors/autoschematic-connector-python-host/src/: connector.rs  main.rs  util.rs
docs.autoschematic.sh/: mkdocs.yml
pip/: pyproject.toml
pip/autoschematic_pip/: __init__.py
scripts/: build_docker.sh  build_pip_wheels.sh  ngrok.sh  publish_cli_crate.sh  publish_core_crate.sh  publish_crate_if_changed.sh  publish_docker.sh  publish_docs.sh  publish_lsp_crate.sh  publish_macro_crate.sh  publish_pip.sh  publish_server_crate.sh  run_docker.sh  version_check.py
(+32 files in other folders)
