cargo-features = ["edition2024"]
[package]
name = "autoschematic-core"
description = "Core shared functionality for Autoschematic."
license = "MIT"
version = "0.5.0"
edition = "2024"
# build = "build.rs"

[features]
default = []
grpc = ["tonic-build", "tonic", "prost"]
# wasm = ["wasm-bindgen", "serde-wasm-bindgen"]

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.86"
serde = { version = "1.0.217", features = ["derive"] }
# wasm-bindgen = { version = "0.2.100", optional = true }
# serde-wasm-bindgen = { version = "0.6.5", optional = true }
tarpc = { version = "0.36.0", features = [
    "serde-transport-bincode",
    "serde-transport-json",
    "unix",
] }
tokio = { version = "1.43.0", features = ["full", "rt-multi-thread"] }
futures = "0.3.31"
tracing = "0.1.41"
serde_json = "1.0.140"
tonic = { version = "0.13.0", optional = true }
tokio-stream = "0.1.17"
prost = { version = "0.13.5", optional = true }
regex = "1.11.1"
lazy_static = "1.5.0"
flate2 = "1.1.1"
flume = "0.11.1"
octocrab = { version = "0.44.0", features = ["stream"] }
tar = "0.4.44"
nix = { version = "0.30.1", features = [
    "sched",
    "signal",
    "user",
    "process",
    "fs",
    "mount",
] }
#ron = { path = "../../ron", version = "0.10.1" }
ron-pfnsec-fork = "0.11.0"
walkdir = "2.5.0"
rand = "0.9.1"
libc = "0.2.172"
hyper = "1.6.0"
rustls = { version = "0.23.22", default-features = false, features = [
    "std",
    "ring",
] }
ecdsa = "0.16.8"
signature = "2.2.0"
hex = "0.4.3"
rand_core = { version = "0.6.4", features = ["getrandom"] }
elliptic-curve = { version = "0.13.8", features = ["ecdh", "pem", "serde"] }
once_cell = "1.20.3"
chacha20poly1305 = "0.10.1"
sha2 = "0.10.8"
hmac = "0.12.1"
k256 = { version = "0.13.4", features = ["ecdh", "serde"] }
base64 = "0.22.1"
git2 = "0.20.1"
serde_path_to_error = "0.1.17"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
similar = "2.7.0"
secrecy = "0.10.3"

# capnp = "0.20"
# capnp-rpc = "0.20.3"

[build-dependencies]
# capnpc = "0.20"
tonic-build = { version = "0.13.0", optional = true }

[dev-dependencies]
rustls = { version = "0.23.22", default-features = false, features = [
    "std",
    "ring",
] }
