cargo-features = ["edition2024"]
[package]
name = "autoschematic-core"
description = "Core shared functionality for Autoschematic: workflow engine, state management, and Git integrations"
license = "AGPL-3.0"
version = "0.10.0"
edition = "2024"
authors = ["Peter Sherman <peter@autoschematic.sh>"]
repository = "https://github.com/autoschematic-sh/autoschematic"
homepage = "https://autoschematic.sh"
keywords = ["infrastructure", "devops", "git"]
categories = ["development-tools", "command-line-utilities"]
readme = "../README.md"

[features]
default = ["grpc"]
grpc = ["tonic-build", "tonic-prost-build", "tonic", "prost", "tonic-prost"]

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.86"
serde = { version = "1.0.217", features = ["derive"] }
tarpc = { version = "0.37.0", features = [
    "serde-transport-bincode",
    "serde-transport-json",
    "unix",
] }
tokio = { version = "1.43.0", features = ["full", "rt-multi-thread"] }
futures = "0.3.31"
tracing = "0.1.41"
serde_json = "1.0.140"
tonic = { version = "0.14.1", optional = true }
prost = { version = "0.14.1", optional = true }
tonic-prost = { version = "0.14.1", optional = true }
regex = "1.11.1"
lazy_static = "1.5.0"
nix = { version = "0.30.1", features = [
    "sched",
    "signal",
    "user",
    "process",
    "fs",
    "mount",
] }
ron = "0.11.0"
walkdir = "2.5.0"
rand = "0.9.1"
libc = "0.2.172"
hyper = "1.6.0"
ecdsa = "0.16.8"
signature = "2.2.0"
hex = "0.4.3"
rand_core = { version = "0.6.4", features = ["getrandom"] }
elliptic-curve = { version = "0.13.8", features = ["ecdh", "pem", "serde"] }
once_cell = "1.20.3"
chacha20poly1305 = "0.10.1"
sha2 = "0.10.8"
hmac = "0.12.1"
k256 = { version = "0.13.4", features = ["ecdh", "serde"] }
base64 = "0.22.1"
git2 = "0.20.1"
serde_path_to_error = "0.1.17"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
similar = "2.7.0"
secrecy = "0.10.3"
which = "8.0.0"
dashmap = "6.1.0"
strsim = "0.11.1"
tokio-stream = "0.1.17"
process-wrap = { version = "9.0.0", features = ["tokio1"] }
sysinfo = "0.37.0"
bitmask-enum = "2.2.5"
documented = "0.9.2"

[build-dependencies]
tonic-build = { version = "0.14.1", optional = true }
tonic-prost-build = { version = "0.14.1", optional = true }
