cargo-features = ["edition2024"]
[package]
name = "autoschematic-lsp"
description = "Language server support for Autoschematic."
license = "AGPL-3.0"
version = "0.10.0"
edition = "2024"

[dependencies]
autoschematic-core = { path = "../autoschematic-core", version = "0.10.0", features = [
    "grpc",
] }
anyhow = "1.0.98"
lsp-types = "0.97.0"
ron = "0.11.0"
serde = "1.0.219"
serde_path_to_error = "0.1.17"
tokio = { version = "1.43.0", features = ["full"] }
tower-lsp-server = "0.22.0"
lazy_static = "1.5.0"
serde_json = "1.0.140"
pest = "2.8.0"
pest_derive = "2.8.0"
dashmap = "6.1.0"
strsim = "0.11.1"
