[package]
name = "autoschematic-macros"
description = "Proc macro functionality for Autoschematic"
license = "AGPL-3.0"
version = "0.13.0"
edition = "2024"
authors = ["Peter Sherman <peter@autoschematic.sh>"]
repository = "https://github.com/autoschematic-sh/autoschematic"
homepage = "https://autoschematic.sh"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.41"
syn = "2.0.108"
