cargo-features = ["edition2024"]
[package]
name = "autoschematic"
description = "A platform for declarative Ops systems, built around Git."
repository = "https://github.com/pfnsec/autoschematic"
license = "MIT"
version = "0.4.0"
edition = "2024"

[features]
default = ["python"]
python = ["pyo3"]

[[bin]]
name = "autoschematic-server"
path = "src/main.rs"

[profile.release]
debug = 1
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autoschematic-core = { path = "../autoschematic-core", version = "0.4.0", features = ["python"]}
autoschematic-cli = { path = "../autoschematic-cli", version = "0.4.0" }
anyhow = { version = "1.0.97", features = ["backtrace"] }
askama = "0.14.0"
async-trait = "0.1.81"
base64 = "0.22.1"
futures-util = "0.3.30"
git2 = "0.20.0"
http = "1.0.0"
http-body-util = "0.1.1"
itertools = "0.14.0"
jsonwebtoken = "9.3.0"
# oauth2 = "5.0.0"
octocrab = { version = "0.44.0", features = ["stream"] }
rand = "0.9.0"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
    "blocking",
] }
ron = { path = "../../ron", version = "0.10.1" }
secrecy = "0.10.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
tempdir = "0.3.7"
thiserror = "2.0.11"
tokio = { version = "1.41.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zerocopy = "0.8.6"
futures = "0.3.31"
actix-web = "4.9.0"
derive_more = { version = "1.0.0", features = ["display", "error"] }
# glob-match = "0.2.1"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
pyo3 = { version = "0.24.0", optional = true, features = ["serde"] }
regex = "1.11.1"
tera = "1.20.0"
lazy_static = "1.5.0"
clap = { version = "4.5.23", features = ["derive"] }
libc = "0.2.169"
hyper = "1.6.0"
rustls = "0.23.22"
ecdsa = "0.16.8"
signature = "2.2.0"
hex = "0.4.3"
rand_core = { version = "0.6.4", features = ["getrandom"] }
elliptic-curve = { version = "0.13.8", features = ["ecdh", "pem", "serde"] }
once_cell = "1.20.3"
chacha20poly1305 = "0.10.1"
sha2 = "0.10.8"
hmac = "0.12.1"
k256 = { version = "0.13.4", features = ["ecdh", "serde"] }
nix = { version = "0.30.1", features = [
    "sched",
    "signal",
    "fs",
    "mount",
    "user",
] }
file-lock = "2.1.11"
actix-ws = "0.3.0"
flate2 = "1.0.35"
tar = "0.4.44"
uuid = { version = "1.14.0", features = ["fast-rng", "v4", "serde"] }
actix-files = "0.6.6"
indexmap = { version = "2.7.1", features = ["serde"] }
walkdir = "2.5.0"
# console-subscriber = "0.4.1"
# coz = "0.1.3"
