cargo-features = ["edition2024"]
[package]
name = "autoschematic"
description = "Command-line tools for Autoschematic"
license = "AGPL-3.0"
version = "0.11.0"
edition = "2024"

[[bin]]
name = "autoschematic"
path = "src/main.rs"

[dependencies]
autoschematic-core = { path = "../autoschematic-core", version = "0.11.0", features = [
    "grpc",
] }
ecdsa = "0.16.8"
signature = "2.2.0"
rand_core = { version = "0.6.4", features = ["getrandom"] }
elliptic-curve = { version = "0.13.8", features = ["ecdh", "pem", "serde"] }
clap = { version = "4.5.28", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1.43.0", features = ["full"] }
anyhow = "1.0.95"
serde_json = "1.0.138"
k256 = { version = "0.13.4", features = ["ecdh", "serde"] }
chacha20poly1305 = "0.10.1"
hkdf = "0.12.4"
sha2 = "0.10.8"
serde = { version = "1.0.217", features = ["derive"] }
inquire = "0.9.1"
base64 = "0.22.1"
ron = "0.12.0"
git2 = "0.20.0"
dialoguer = { version = "0.12.0", features = ["completion"] }
regex = "1.11.1"
lazy_static = "1.5.0"
oauth2 = "5.0.0"
directories = "6.0.0"
webbrowser = "1.0.4"
crossterm = "0.29.0"
tui = "0.19.0"
rand = "0.9.1"
tracing-subscriber = "0.3.19"
colored = "3.0.0"
async-trait = "0.1.88"
toml = "0.9.5"
