[package]
name = "autoschematic-connector-python-host"
version = "0.5.0"
edition = "2024"

[features]
abi3-py313 = ["pyo3/abi3-py313"]


[dependencies]
tokio = { version = "1.45.0", features = ["rt-multi-thread"] }
anyhow = "1.0.95"
async-trait = "0.1.86"
autoschematic-core = { path = "../../autoschematic-core", version = "0.5.0" }
#ron = { version = "0.10.1", features = ["indexmap"] }
ron-pfnsec-fork = "0.11.0"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
urlencoding = "2.1.3"
serde_json = "1.0.138"
similar = { version = "2.7.0", features = ["unicode"] }
uuid = { version = "1.15.1", features = ["v4"] }
lazy_static = "1.5.0"
serde_yaml = "0.9.34"
walkdir = "2.5.0"
indexmap = { version = "2.9.0", features = ["serde"] }
pyo3 = { version = "0.24.1", features = ["serde"] }
regex = "1.11.1"
libc = "0.2.172"
